--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,5 +28,28 @@ h1 {
     background: #2b6777;
     color: #f2f2f2;
     /* margin: 0 20%; */
-    padding: 5% 0;
+    padding: 5% 2%;
+}
+
+.input_rounds {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.icons button {
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+    background: #ffffff;
+    border: none;
+}
+
+footer p {
+    font-size: 1rem;
 }
